@@ -19,6 +19,7 @@ Gource requires the following libraries to compile (package names may vary):
     GLEW (libglew-dev)
     GLM >= 0.9.3 (libglm-dev)
     Boost Filesystem >= 1.46 (libboost-filesystem-dev)
+    PNG >= 1.2 (libpng12-dev)
 
     If SDL 2.0 is unavailable you can still use SDL 1.2, but this is deprecated:
 
