@@ -26,7 +26,7 @@ gource_SOURCES = \
 	src/core/shader_common.cpp \
 	src/core/stringhash.cpp \
 	src/core/texture.cpp \
-	src/core/tga.cpp \
+	src/core/png_writer.cpp \
 	src/core/timezone.cpp \
 	src/core/vbo.cpp \
 	src/core/vectors.cpp \
